2 files modified, 3 added

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,8 @@ p {
   display: flex;
   justify-content: space-between;
 }
+.sideNavItems {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
