5 files modified, 3 added

--- a/src/style.css
+++ b/src/style.css
@@ -10,10 +10,7 @@ p {
   align-items: flex-end;
   list-style-type: none;
 }
-.topNavItems li {
-  padding: 10px;
-}
-.dashboard {
+.abc {
   display: flex;
   justify-content: space-between;
 }
